# yamldeploy

./: Cargo.toml  Dockerfile  docker-compose.yml  index.html  main.rs
