[package]
name = "yaml-deployer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yaml-deployer"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "auth"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
bcrypt = "0.15"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
